# cc-pr-reviewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cc_pr_reviewer.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  release.yml
cc_pr_reviewer/: __init__.py
cc_pr_reviewer/codex_agents/: code-reviewer.md  silent-failure-hunter.md
cc_pr_reviewer/pr_review_agents/: code-simplifier.md  comment-analyzer.md  pr-test-analyzer.md  type-design-analyzer.md
cc_pr_reviewer/skills/code-reviewer/: SKILL.md
cc_pr_reviewer/skills/code-simplifier/: SKILL.md
cc_pr_reviewer/skills/comment-analyzer/: SKILL.md
cc_pr_reviewer/skills/pr-test-analyzer/: SKILL.md
cc_pr_reviewer/skills/silent-failure-hunter/: SKILL.md
cc_pr_reviewer/skills/type-design-analyzer/: SKILL.md
docs/: review-flow.md
scripts/: sync_pr_review_agents.py
scripts/upstream_baseline/: README.md  comment-analyzer.md  pr-test-analyzer.md  type-design-analyzer.md
tests/: test_cc_pr_reviewer.py  test_sync_pr_review_agents.py
